[package]
name = "send_discord"
version = "0.1.0"
edition = "2021"

description = "Discord Webhook library - VERY Simple lib for sending webhooks from your codebase, without fuss, no fluff"
authors = ["james@koonts.net"]
license = "MIT"
repository = "https://github.com/helloimalemur/send_discord"
keywords = ["discord", "webhook", "send_discord", "discord-webhook-lib", "send-discord"]
readme = "README.md"

[dependencies]
discord-webhook-lib = "0.1.7"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }